--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,11 @@
 Package: lineaR
-Title: What the Package Does (One Line, Title Case)
+Title: R Interface for Linear
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Randy", "Boyes", , "rboyes@presagegroup.com", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0003-3152-2920"))
+Description: This package provides a simple interface for interacting with issues and projects on linear.app from R. 
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
