--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,8 +11,8 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Imports: 
     dplyr,
-    ghql,
     httr2,
     jsonlite,
     keyring,
-    methods
+    methods,
+    testthat
