--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,10 @@
 Package: lineaR
 Title: R Interface for Linear
-Version: 0.0.0.9000
+Version: 0.1.0
 Authors@R: 
     person("Randy", "Boyes", , "rboyes@presagegroup.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-3152-2920"))
 Description: This package provides a simple interface for interacting with issues and projects on linear.app from R. 
-License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
@@ -13,6 +12,8 @@ Imports:
     dplyr,
     glue,
     httr2,
-    keyring,
+    keyring
+Suggests:
     testthat
 Config/testthat/edition: 3
+License: MIT + file LICENSE
