fix bugs introduced by using glue and cutting ghql

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,8 @@ Imports:
     dplyr,
     glue,
     httr2,
-    keyring
+    keyring,
+    tidyr
 Suggests:
     testthat
 Config/testthat/edition: 3
